# waypoint-schemas

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: meilisearch_setup.rs
proto/common/: types.proto
proto/meilisearch/: settings.proto  user_profile.proto
src/: lib.rs
src/helpers/: meilisearch.rs  mod.rs
